@@ -1,0 +1,17 @@
+<configure
+   xmlns="http://namespaces.zope.org/zope"
+   xmlns:plone="http://namespaces.plone.org/plone"
+   i18n_domain="collective.formcriteria">
+ 
+  <plone:portlet
+     name="plone.portlet.collection.Collection"
+     interface="plone.portlet.collection.collection.ICollectionPortlet"
+     assignment="plone.portlet.collection.collection.Assignment"
+     view_permission="zope2.View"
+     edit_permission="plone.portlet.collection.AddCollectionPortlet"
+     renderer=".listing.Renderer"
+     addview="plone.portlet.collection.collection.AddForm"
+     editview="plone.portlet.collection.collection.EditForm"
+     />
+
+</configure>
