@@ -3,4 +3,7 @@
  <stylesheet title="" cacheable="True" compression="safe" cookable="True"
     enabled="1" expression="" id="collapsiblesections.css" media="screen"
     rel="stylesheet" rendering="import"/>
+ <stylesheet title="" cacheable="True" compression="safe" cookable="True"
+    enabled="1" expression="" rel="stylesheet" rendering="import"
+    id="++resource++formcriteria-listing-portlet.css" media="screen"/>
 </object>
